--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 </div>
                 <div class="hero-image">
                     <div class="image-placeholder">
-                        <i class="fas fa-user-circle"></i>
+                        <img src="C:\Users\Admin\Desktop\WhatsApp Image 2025-09-12 at 23.33.34_7d33b020.jpg" alt="Meghana HJ" style="width: 150%; height: 130%; border-radius: 50%;" />
                     </div>
                 </div>
             </div>
