--- a/index.html
+++ b/index.html
@@ -542,10 +542,10 @@ enhancing user accessibility (deployed on Netlify and Render).</li>
             <div class="footer-content">
                 <p>&copy; 2025 Meghana HJ. Designed with <i class="fas fa-heart"></i> and lots of pink!</p>
                 <div class="footer-social">
-                    <a href="#" class="footer-social-link" target="_blank">
+                    <a href="https://www.linkedin.com/in/meghana-hj-b95783311" class="footer-social-link" target="_blank">
                         <i class="fab fa-linkedin"></i>
                     </a>
-                    <a href="#" class="footer-social-link" target="_blank">
+                    <a href="https://github.com/meghanahj" class="footer-social-link" target="_blank">
                         <i class="fab fa-github"></i>
                     </a>
                     <a href="mailto:meghanahj2411@gmail.com" class="footer-social-link">
