--- a/index.html
+++ b/index.html
@@ -490,14 +490,14 @@ enhancing user accessibility (deployed on Netlify and Render).</li>
                                 <p>+91 9591119795</p>
                             </div>
                         </a>
-                        <a href="#" class="contact-method" target="_blank">
+                        <a href="https://www.linkedin.com/in/meghana-hj-b95783311" class="contact-method" target="_blank">
                             <i class="fab fa-linkedin"></i>
                             <div>
                                 <h4>LinkedIn</h4>
                                 <p>Connect with me professionally</p>
                             </div>
                         </a>
-                        <a href="#" class="contact-method" target="_blank">
+                        <a href="https://github.com/meghanahj" class="contact-method" target="_blank">
                             <i class="fab fa-github"></i>
                             <div>
                                 <h4>GitHub</h4>
